test/trivial/bradc/vardecls1a.good
vardecls1a.chpl:8: In function 'bar':
vardecls1a.chpl:9: error: 'x' used before defined
vardecls1a.chpl:10: note: defined here
